src/compiler/snapshots/isa__compiler__lexer__tests__let_stmts-4.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"let bar _ _ _ = true;\").collect :: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: KwLet,
            span: SpanData { file_id: 0, start: 0, end: 3 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "bar",
            ),
            span: SpanData { file_id: 0, start: 4, end: 7 },
        },
    ),
    Ok(
        Spand {
            data: Underscore,
            span: SpanData { file_id: 0, start: 8, end: 9 },
        },
    ),
    Ok(
        Spand {
            data: Underscore,
            span: SpanData { file_id: 0, start: 10, end: 11 },
        },
    ),
    Ok(
        Spand {
            data: Underscore,
            span: SpanData { file_id: 0, start: 12, end: 13 },
        },
    ),
    Ok(
        Spand {
            data: Eq,
            span: SpanData { file_id: 0, start: 14, end: 15 },
        },
    ),
    Ok(
        Spand {
            data: KwTrue,
            span: SpanData { file_id: 0, start: 16, end: 20 },
        },
    ),
    Ok(
        Spand {
            data: Semicolon,
            span: SpanData { file_id: 0, start: 20, end: 21 },
        },
    ),
]
