src/compiler/snapshots/isa__compiler__lexer__tests__paths.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"a::b\").collect :: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: Ident(
                "a",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 1 },
        },
    ),
    Ok(
        Spand {
            data: ColonColon,
            span: SpanData { file_id: 0, lo: 1, hi: 3 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "b",
            ),
            span: SpanData { file_id: 0, lo: 3, hi: 4 },
        },
    ),
]
