src/compiler/snapshots/isa__compiler__lexer__tests__prefix-2.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"(!false)\").collect :: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: LParen,
            span: SpanData { file_id: 0, start: 0, end: 1 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "!",
            ),
            span: SpanData { file_id: 0, start: 1, end: 2 },
        },
    ),
    Ok(
        Spand {
            data: KwFalse,
            span: SpanData { file_id: 0, start: 2, end: 7 },
        },
    ),
    Ok(
        Spand {
            data: RParen,
            span: SpanData { file_id: 0, start: 7, end: 8 },
        },
    ),
]
