src/compiler/snapshots/isa__compiler__lexer__tests__program.snap
---
source: src/compiler/lexer.rs
expression: "Lexer ::\nnew(0,\nr#\"\nmodule main\n\nlet a = 10;\nlet c = 1234;\nlet b = a + b * c;\n// comment abc &&\n(&&) && (&&);\nmatch c with _ -> 10;\nmatch c with ..10 -> 6.2, 10.. -> 3.14;\n\"#).collect\n:: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: KwModule,
            span: SpanData { file_id: 0, lo: 1, hi: 7 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "main",
            ),
            span: SpanData { file_id: 0, lo: 8, hi: 12 },
        },
    ),
    Ok(
        Spand {
            data: KwLet,
            span: SpanData { file_id: 0, lo: 14, hi: 17 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "a",
            ),
            span: SpanData { file_id: 0, lo: 18, hi: 19 },
        },
    ),
    Ok(
        Spand {
            data: Eq,
            span: SpanData { file_id: 0, lo: 20, hi: 21 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                10,
            ),
            span: SpanData { file_id: 0, lo: 22, hi: 24 },
        },
    ),
    Ok(
        Spand {
            data: Semicolon,
            span: SpanData { file_id: 0, lo: 24, hi: 25 },
        },
    ),
    Ok(
        Spand {
            data: KwLet,
            span: SpanData { file_id: 0, lo: 26, hi: 29 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "c",
            ),
            span: SpanData { file_id: 0, lo: 30, hi: 31 },
        },
    ),
    Ok(
        Spand {
            data: Eq,
            span: SpanData { file_id: 0, lo: 32, hi: 33 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                1234,
            ),
            span: SpanData { file_id: 0, lo: 34, hi: 38 },
        },
    ),
    Ok(
        Spand {
            data: Semicolon,
            span: SpanData { file_id: 0, lo: 38, hi: 39 },
        },
    ),
    Ok(
        Spand {
            data: KwLet,
            span: SpanData { file_id: 0, lo: 40, hi: 43 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "b",
            ),
            span: SpanData { file_id: 0, lo: 44, hi: 45 },
        },
    ),
    Ok(
        Spand {
            data: Eq,
            span: SpanData { file_id: 0, lo: 46, hi: 47 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "a",
            ),
            span: SpanData { file_id: 0, lo: 48, hi: 49 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "+",
            ),
            span: SpanData { file_id: 0, lo: 50, hi: 51 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "b",
            ),
            span: SpanData { file_id: 0, lo: 52, hi: 53 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "*",
            ),
            span: SpanData { file_id: 0, lo: 54, hi: 55 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "c",
            ),
            span: SpanData { file_id: 0, lo: 56, hi: 57 },
        },
    ),
    Ok(
        Spand {
            data: Semicolon,
            span: SpanData { file_id: 0, lo: 57, hi: 58 },
        },
    ),
    Ok(
        Spand {
            data: LParen,
            span: SpanData { file_id: 0, lo: 77, hi: 78 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "&&",
            ),
            span: SpanData { file_id: 0, lo: 78, hi: 80 },
        },
    ),
    Ok(
        Spand {
            data: RParen,
            span: SpanData { file_id: 0, lo: 80, hi: 81 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "&&",
            ),
            span: SpanData { file_id: 0, lo: 82, hi: 84 },
        },
    ),
    Ok(
        Spand {
            data: LParen,
            span: SpanData { file_id: 0, lo: 85, hi: 86 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "&&",
            ),
            span: SpanData { file_id: 0, lo: 86, hi: 88 },
        },
    ),
    Ok(
        Spand {
            data: RParen,
            span: SpanData { file_id: 0, lo: 88, hi: 89 },
        },
    ),
    Ok(
        Spand {
            data: Semicolon,
            span: SpanData { file_id: 0, lo: 89, hi: 90 },
        },
    ),
    Ok(
        Spand {
            data: KwMatch,
            span: SpanData { file_id: 0, lo: 91, hi: 96 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "c",
            ),
            span: SpanData { file_id: 0, lo: 97, hi: 98 },
        },
    ),
    Ok(
        Spand {
            data: KwWith,
            span: SpanData { file_id: 0, lo: 99, hi: 103 },
        },
    ),
    Ok(
        Spand {
            data: Underscore,
            span: SpanData { file_id: 0, lo: 104, hi: 105 },
        },
    ),
    Ok(
        Spand {
            data: Arrow,
            span: SpanData { file_id: 0, lo: 106, hi: 108 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                10,
            ),
            span: SpanData { file_id: 0, lo: 109, hi: 111 },
        },
    ),
    Ok(
        Spand {
            data: Semicolon,
            span: SpanData { file_id: 0, lo: 111, hi: 112 },
        },
    ),
    Ok(
        Spand {
            data: KwMatch,
            span: SpanData { file_id: 0, lo: 113, hi: 118 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "c",
            ),
            span: SpanData { file_id: 0, lo: 119, hi: 120 },
        },
    ),
    Ok(
        Spand {
            data: KwWith,
            span: SpanData { file_id: 0, lo: 121, hi: 125 },
        },
    ),
    Ok(
        Spand {
            data: DotDot,
            span: SpanData { file_id: 0, lo: 126, hi: 128 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                10,
            ),
            span: SpanData { file_id: 0, lo: 128, hi: 130 },
        },
    ),
    Ok(
        Spand {
            data: Arrow,
            span: SpanData { file_id: 0, lo: 131, hi: 133 },
        },
    ),
    Ok(
        Spand {
            data: Real(
                6.2,
            ),
            span: SpanData { file_id: 0, lo: 134, hi: 137 },
        },
    ),
    Ok(
        Spand {
            data: Comma,
            span: SpanData { file_id: 0, lo: 137, hi: 138 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                10,
            ),
            span: SpanData { file_id: 0, lo: 139, hi: 141 },
        },
    ),
    Ok(
        Spand {
            data: DotDot,
            span: SpanData { file_id: 0, lo: 141, hi: 143 },
        },
    ),
    Ok(
        Spand {
            data: Arrow,
            span: SpanData { file_id: 0, lo: 144, hi: 146 },
        },
    ),
    Ok(
        Spand {
            data: Real(
                3.14,
            ),
            span: SpanData { file_id: 0, lo: 147, hi: 151 },
        },
    ),
    Ok(
        Spand {
            data: Semicolon,
            span: SpanData { file_id: 0, lo: 151, hi: 152 },
        },
    ),
]
