src/compiler/snapshots/isa__compiler__lexer__tests__string_errors-3.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r#\"\"bar\\\"#).next()"
---
Some(
    Err(
        Spand {
            data: UnterminatedString,
            span: SpanData { file_id: 0, lo: 0, hi: 5 },
        },
    ),
)
