src/compiler/snapshots/isa__compiler__lexer__tests__string_errors-5.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r#\"\"ba5\\c\"\"#).next()"
---
Some(
    Err(
        Spand {
            data: UnrecognizedEscape(
                'c',
            ),
            span: SpanData { file_id: 0, start: 0, end: 6 },
        },
    ),
)
